--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "3.4.1-solc-0.7-2",
-    "@uniswap/v2-core": "1.0.1",
+    "@uniswap/v2-core": "https://github.com/AntonD3/v2-core.git#v1.0.1-zksync-era",
     "@uniswap/v3-core": "https://github.com/AntonD3/v3-core.git#v1.0.0-zksync-era",
     "@uniswap/v3-periphery": "https://github.com/AntonD3/v3-periphery.git#v1.3.0-zksync-era",
     "hardhat-watcher": "^2.1.1"
