--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@uniswap/swap-router-contracts",
-  "description": "Smart contracts for swapping on Uniswap V2 and V3",
+  "name": "@uniswap-zksync/era-uniswap-swap-router-contracts",
+  "description": "Smart contracts for swapping on Uniswap V2 and V3 forked for zkSync Era",
   "license": "GPL-2.0-or-later",
   "publishConfig": {
     "access": "public"
@@ -12,7 +12,7 @@
     "v2",
     "v3"
   ],
-  "repository": "https://github.com/Uniswap/swap-router-contracts",
+  "repository": "https://github.com/uniswap-zksync/era-uniswap-swap-router-contracts",
   "files": [
     "contracts/base",
     "contracts/interfaces",
@@ -31,9 +31,9 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "3.4.1-solc-0.7-2",
-    "@uniswap/v2-core": "https://github.com/matter-labs/v2-core.git#v1.0.1-zksync-era",
-    "@uniswap/v3-core": "https://github.com/matter-labs/v3-core.git#v1.0.0-zksync-era",
-    "@uniswap/v3-periphery": "https://github.com/matter-labs/v3-periphery.git#v1.3.0-zksync-era",
+    "@uniswap/v2-core": "https://github.com/uniswap-zksync/era-uniswap-v2-core.git#v1.0.1-zksync-era",
+    "@uniswap/v3-core": "https://github.com/uniswap-zksync/era-uniswap-v3-core.git#v1.0.0-zksync-era",
+    "@uniswap/v3-periphery": "https://github.com/uniswap-zksync/era-uniswap-v3-periphery.git#v1.3.0-zksync-era",
     "hardhat-watcher": "^2.1.1"
   },
   "devDependencies": {
@@ -41,7 +41,7 @@
     "@ethersproject/providers": "^5.7.2",
     "@matterlabs/hardhat-zksync-chai-matchers": "^0.1.2",
     "@matterlabs/hardhat-zksync-deploy": "^0.6.3",
-    "@matterlabs/hardhat-zksync-solc": "^0.3.16",
+    "@matterlabs/hardhat-zksync-solc": "^0.3.17",
     "@matterlabs/hardhat-zksync-verify": "^0.1.5",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
