--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^0.6.3",
+    "@matterlabs/hardhat-zksync-node": "^1.0.2",
     "@matterlabs/hardhat-zksync-solc": "^0.3.17",
     "@matterlabs/hardhat-zksync-verify": "^0.1.5",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
@@ -58,6 +59,7 @@
     "ts-node": "^8.5.4",
     "typechain": "^4.0.0",
     "typescript": "^3.7.3",
+    "zksync-ethers": "^5.0.0",
     "zksync-web3": "^0.14.3"
   },
   "scripts": {
