--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,5 +35,8 @@ jobs:
       - name: Compile
         run: yarn compile --verbose
 
+      - name: Clear Hardhat Cache
+        run: rm -rf ./node_modules/.cache/hardhat-nodejs
+
       - name: Run unit tests
         run: yarn test
